fix popup <pre> overflow

--- a/app/styles/app/popup.sass
+++ b/app/styles/app/popup.sass
@@ -48,6 +48,7 @@
     margin: 0
     padding: 10px 20px
     border-radius: 4px
+    overflow-x: scroll
 
 #status-images
   display: none
